# datacannon-rs-core

./: .editorconfig  .gitignore  Cargo.toml  ReadME.md  Simplr Inisites, LLC backend tec spc.docx  ~$mplr Inisites, LLC backend tec spc.docx
src/: lib.rs
src/amqp/: amqp.rs  exchange_error.rs  mod.rs  queues.rs  router.rs
src/app/: context.rs  mod.rs  send_rpc.rs
src/app/amqp/: mod.rs  queue_rpc.rs
src/argparse/: args.rs  argtype.rs  kwargs.rs  mod.rs
src/backend/: backend_trait.rs  config.rs  elasticsearch.rs  mod.rs  redis.rs  rpc.rs
src/backend/rabbiitmq/: handler.rs
src/backend/redis/: redis.rs
src/backend/result/: async.rs  group.rs  mod.rs  (+2 more)
src/broker/: amqp.rs  broker.rs  config.rs  mod.rs  queues.rs
src/config/: config.rs
src/connection/: connection.rs  mod.rs  pool.rs  pool_trait.rs  rabbitmq_connection_factory.rs  rabbitmq_connection_pool.rs  rabbitmq_connection_utils.rs
src/error/: backend_type_error.rs  broker_type_error.rs  channel_attainment_failed.rs  channel_creation_failed.rs  connection_failed.rs  exchange_error.rs  future_creation_error.rs  mod.rs  pool_creation_error.rs  pool_errors.rs  qos_error.rs  queue_error.rs  queue_type_error.rs  receive_error.rs  send_error.rs  ssl_error.rs
src/message_protocol/: headers.rs  message.rs  message_body.rs  mod.rs  properties.rs
src/message_structure/: amqp.rs  kafka_queue.rs  kafka_trait.rs  mod.rs  queue_trait.rs  queues.rs
src/nodename/: anon_name.rs
src/protocol_configs/: amqp.rs  mod.rs
src/queues/: amqp.rs  mod.rs  queue_trait.rs
src/replication/: kafka.rs  mod.rs  rabbitmq.rs  replication.rs
src/router/: router.rs
src/security/: mod.rs  ssl.rs  uaa.rs
src/serde_utils/: val_handler.rs
src/statistics/: message.rs
src/task/: config.rs
src/time/: mod.rs  time_utils.rs
(+39 files in other folders)
