[package]
name = "celery-rs-core"
version = "0.0.3"
authors = ["Andrew Evans <aevans48@simplrinsites.com>"]
edition = "2018"
description = "Core utilities for a celery client and worker in rust"
license = "Apache-2.0"

[dependencies]
amiquip = "0.3.2"
amq-protocol = "3.0.0"
serde = "1.0.102"
serde_json = "1.0.40"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
hostname = "0.1.5"
num_cpus = "1.11.0"