[package]
name = "datacannon-rs-core"
version = "0.0.1"
authors = ["Andrew Evans <aevans48@simplrinsites.com>"]
edition = "2018"
description = "Core utilities for a celery client and worker in rust"
license = "Apache-2.0"
[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
amq-protocol = "3.1.0"
amq-protocol-types = "3.1.0"
lapin = {version="0.28.3", features=["futures"]}
futures = "0.3.1"
futures-util = "0.3.1"
chrono = "0.4.9"
kafka = "0.8.0"
serde = "1.0.102"
serde_json = "1.0.40"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
hostname = "0.1.5"
num_cpus = "1.11.0"
regex = "1.3.1"
native-tls = "0.2.3"
tcp-stream = "0.8.0"

[dependencies.tokio]
version="0.2.1"
features=["macros", "time", "sync"]
